# composable-interventions

./: .gitignore  .pre-commit-config.yaml  README.md  ga_llama3_hparam_search.sh  ga_utils.py  gd_mistral_hparam_search.sh  launch_experiments.ipynb  launch_jobs.py  launch_jobs.sh  launch_jobs_all_editors.sh  launch_jobs_ga.sh  launch_jobs_highres.sh  launch_jobs_main_results.sh  launch_jobs_neurips_mistral.sh  launch_jobs_neurips_three_interventions.py  launch_jobs_neurips_three_interventions.sh  launch_jobs_rmu.sh  launch_jobs_rmu_mistral.sh  launch_jobs_rmu_only.sh  launch_pruning.sh  launch_quant.sh  llama3_rmu.sh  main.py  main_quantize.py  pyproject.toml  requirements.txt  requirements_old.txt  rmu_hparam_search.sh  rmu_lalma3_hparam_search.sh  rmu_llama3_hparam_search.sh  rmu_phi-mini_hparam_search.sh  run_edit.py  run_exp.sh  run_exp10x.sh  unlearning_hparam_search.sh
AutoAWQ/awq/models/: auto.py  base.py
AutoAWQ/awq/quantize/: quantizer.py  scale.py
AutoAWQ/awq/utils/: calib_data.py  eval_utils.py  fused_utils.py  lm_eval_adaptor.py  utils.py
AutoAWQ/awq_cuda/: pybind_awq.cpp
AutoAWQ/awq_cuda/attention/: ft_attention.cpp
AutoAWQ/examples/: basic_generate.py  basic_quant.py  basic_transformers.py
AutoGPTQ/: README_zh.md  setup.py
AutoGPTQ/auto_gptq/eval_tasks/: _base.py
AutoGPTQ/auto_gptq/modeling/: __init__.py  _const.py  _utils.py  auto.py  gpt2.py  gpt_bigcode.py  gptj.py  moss.py  phi3.py  pythia.py  stablelmepoch.py
AutoGPTQ/auto_gptq/nn_modules/: _fused_base.py  fused_gptj_attn.py  fused_llama_attn.py  fused_llama_mlp.py
AutoGPTQ/auto_gptq/quantization/: ACKNOWLEDGEMENT.md  gptq.py
AutoGPTQ/auto_gptq/utils/: exllama_utils.py
AutoGPTQ/autogptq_extension/qigen/: backend.cpp  forward.h  generate.py  mmm  tmp.csv
AutoGPTQ/docs/tutorial/: 01-Quick-Start.md
AutoGPTQ/examples/: README.md
AutoGPTQ/examples/benchmark/: generation_speed.py
AutoGPTQ/examples/evaluation/: run_language_modeling_task.py  run_sequence_classification_task.py  run_text_summarization_task.py
AutoGPTQ/examples/peft/: peft_adalora_clm_instruction_tuning.py  peft_lora_clm_instruction_tuning.py
AutoGPTQ/examples/quantization/: basic_usage.py  basic_usage_gpt_xl.py  basic_usage_wikitext2.py
AutoGPTQ/tests/: test_q4.py
conf/: config.yaml  config_MEND.yaml  config_Mistral.yaml  config_SERAC.yaml  config_ft.yaml  config_lora.yaml  config_memit.yaml  config_memit_pythia.yaml
conf/archived/: config_RMU.yaml
conf/compression/: awq.yaml  gptq.yaml  wanda.yaml
conf/edit/: ft.yaml  lora.yaml  memit.yaml
conf/unlearn/: ga.yaml  gd.yaml  rmu.yaml
easyeditor/: requirements.txt
easyeditor/editors/: editor.py  model_load.py
easyeditor/evaluate/: evaluate.py
easyeditor/models/ft/: ft_main.py
easyeditor/models/lora/: lora_main.py
easyeditor/models/memit/: compute_z.py  memit_hparams.py  (+1 more)
easyeditor/trainer/: BaseTrainer.py
easyeditor/util/: generate.py
hparams/MEMIT/: llama.yaml  llama_fast.yaml
hparams/efficiency/: sparsity.yaml
lm_compose/: __main__.py  main_quantize.py  unlearning.py
lm_compose/AutoAWQ/: README.md  setup.py
lm_compose/calflops/: README.md  README_CN.md  test_llm_huggingface.py
lm_compose/conf/: config.yaml
lm_compose/easyeditor/: __init__.py
lm_compose/sparsellm/: INSTALL.md  README.md  main.py  test.sh  test_awq.sh  test_quanti.sh
lm_compose/utils/: edit_generator.py  edit_utils.py  evals.py  intervention_utils.py  save_ckpt_meta.py
lm_compose/wmdp/: README.md  requirements.txt
notebooks/: ModelExtended_Example.ipynb  debug_csv.csv  edit_to_compress.csv  graphs.ipynb  hparam_search_study.ipynb  mistral_experiment_statuses.csv  mistral_progress_report.ipynb  paper_analysis.ipynb  paper_analysis_arxiv.ipynb  paper_analysis_iclr.ipynb  paper_analysis_iclr_old.ipynb  paper_analysis_old.ipynb  param_graph.ipynb  plot.ipynb  pull_wandb_data.ipynb  tables.ipynb  temp.csv  token_graphs.ipynb  wandb.ipynb  wandb_debug.ipynb
notebooks/archived/: ModelExtended_Example.ipynb  wandb.ipynb
slurm_scripts/: ga_llama3_hparam_search.sh  launch_jobs_rmu.sh  rmu_mistral_hparam_search.sh  run_exp10x.sh
sparsellm/: README.md  main.py  test.sh  test_awq.sh  test_quanti.sh
sparsellm/lib/: data.py  eval.py  prune.py  quant_llama.py
utils/: edit_generator.py  edit_utils.py  evals.py  save_ckpt_meta.py
wmdp/: run_rmu_zephyr.ipynb
wmdp/rmu/: unlearn.py  utils.py
(+179 files in other folders)
