[build-system]
requires = ["setuptools>=40.8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
sae = "lm_compose.__main__:run"

[tool.setuptools]
py-modules = []

[project]
name = "lm_compose"
version = "0.1.0"
description = "This project provides a end-to-end framework for defining, executing, and evaluating intervention compositions on language models."
authors = [
    { "name" = "Arinbjörn Kolbeinsson", email = "arinbjorn@virginia.edu" },
    { "name" = "Tianjian Huang" },
    { "name" = "Kyle O’Brien" },
    { "name" = "Shanghua Gao" },
    { "name" = "Shiwei Liu" },
    { "name" = "Jonathan Richard Schwarz" },
    { "name" = "Anurag Vaidya" },
    { "name" = "Faisal Mahmood" },
    { "name" = "Marinka Zitnik" },
    { "name" = "Tianlong Chen" },
    { "name" = "Thomas Hartvigsen" },
]
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.11"
license = { "text" = "MIT" }
# dependencies = [
#     "apex==0.9.10dev",
#     "bitsandbytes==0.43.1",
#     "einops==0.8.0",
#     "fairscale==0.4.13",
#     "gekko==1.1.1",
#     "higher==0.2.1",
#     "huggingface_hub==0.22.2",
#     "hydra-core==1.3.2",
#     "iopath==0.1.10",
#     "lm_eval==0.4.2",
#     "matplotlib==3.8.3",
#     "nltk==3.8.1",
#     "numpy==1.26.4",
#     "omegaconf==2.3.0",
#     "openai==1.30.2",
#     "opencv_python==4.9.0.80",
#     "packaging==24.0",
#     "pandas==1.4.0",
#     "parameterized==0.9.0",
#     "Pillow==10.3.0",
#     "PyGithub==2.3.0",
#     "pytest==8.2.1",
#     "PyYAML==6.0.1",
#     "Requests==2.32.2",
#     "rouge==1.0.1",
#     "safetensors==0.4.3",
#     "scikit_learn==1.4.1.post1",
#     "scipy==1.13.1",
#     "seaborn==0.13.2",
#     "sentence_transformers==2.6.1",
#     "setuptools==68.2.2",
#     "slack_sdk==3.27.2",
#     "tabulate==0.9.0",
#     "timm==1.0.3",
#     "torch==2.3.0",
#     "torchvision==0.18.0",
#     "tqdm==4.66.2",
#     "transformers==4.38.2",
#     "triton==2.3.0",
#     "typing_extensions==4.11.0",
#     "urllib3==2.2.1",
#     "wandb==0.17.0",
#     "urllib3",
#     "isort",
#     "ruff",
#     "pre-commit"
# ]
dependencies = [
    # Required dependencies
    "hydra-core",
    # "pytz",
    # "python-dateutil",
    "lm-eval==0.4.2",
    "numpy",
    "pandas==1.4.0",
    "torch",
    "omegaconf",
    "tabulate",
    "transformers",
    "tqdm",

    # Dev dependencies
    "wandb",
    "isort",
    "ruff",
    "pre-commit",
]

[tool.setuptools.packages.find]
include = ["lm_compose*"]

[tool.ruff]
line-length = 150
lint.ignore = ["F403"]
lint.select = ["E", "F"]
exclude = [
    "lm_compose/calflops",
    "lm_compose/easyeditor",
    "lm_compose/sparsellm",
    "lm_compose/wmdp",
    "AutoAWQ",
    "AutoGPTQ",
    "notebooks",
]
