[build-system]
requires = ["setuptools>=40.8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
sae = "lm_compose.__main__:run"

[tool.setuptools]
py-modules = []

[project]
name = "lm_compose"
version = "0.1.0"
description = "This project provides a end-to-end framework for defining, executing, and evaluating intervention compositions on language models."
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.11"
license = { "text" = "MIT" }
dependencies = [
    # Required dependencies
    "hydra-core",
    "pytz",
    "python-dateutil",
    "lm-eval",
    "numpy",
    "pandas==1.4.0",
    "torch",
    "omegaconf",
    "tabulate",
    "transformers",
    "tqdm",
    "matplotlib",
    "openai",

    # Dev dependencies
    "wandb",
    "isort",
    "ruff",
    "pre-commit",

    # Analysis dependencies
    "seaborn",
    "ipython",
    "ipykernel",
]

[tool.setuptools.packages.find]
include = ["lm_compose*"]

[tool.ruff]
line-length = 150
lint.ignore = ["F403"]
lint.select = ["E", "F"]
exclude = [
    "lm_compose/calflops",
    "lm_compose/easyeditor",
    "lm_compose/sparsellm",
    "lm_compose/wmdp",
    "AutoAWQ",
    "AutoGPTQ",
    "notebooks",
]
